--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,10 @@ Imports:
     patchwork,
     purrr,
     reshape2,
-    tidyr
+    tidyr,
+     MASS,
+    spatstat.geom
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+LazyData: true
